# gwasstudio

./: .cliffignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  base_environment.yml  base_environment_docker.yml  checksum_decode.txt  checksum_test.txt  environment.yml  environment_docker.yml  index.html  main.py  metadata_ingest.txt  mkdocs.yml  pyproject.toml  run_job_array.sh  search_ukba.yml  sitemap.xml  slurm-15030888.out  slurm-15030889.out  slurm-15030890.out  test_example.txt  test_samples.txt  ukbxample_query_03_meta.csv
.github/workflows/: docker-publish.yml  gen_changelog.yml  release.yml  test.yml
benchmark_ingestion/: export_snp_gwas_batch.sh  ingest_gwas_batch.sh  run_job_array.sh
benchmark_ingestion/ingestion_logs/: gwas_ingest_25020762_101.out  gwas_ingest_25020762_121.out  gwas_ingest_25020762_141.err  gwas_ingest_25020762_141.out  gwas_ingest_25020762_161.out  gwas_ingest_25020762_181.out  gwas_ingest_25020762_201.out  gwas_ingest_25020762_21.out  gwas_ingest_25020762_41.out  gwas_ingest_25020762_61.out  gwas_ingest_25020762_81.out
changelog/: index.html
commands/: index.html
config/: config.yaml
configuration/: index.html
data/: metadata_table.tsv  metadata_ukb_d_sampled.tsv  opengwas_prot-a_Prolactin_snps.csv  out_meta.csv  regions_query.csv  regions_query.tsv  search_example_01.yml  search_example_02.yml  search_example_03.yml  search_example_04.yml  search_example_05.yml  search_example_06.yml  search_example_07.yml  search_example_08.yml  search_ukb_comparison.txt  search_ukb_d.txt  search_ukb_d_filter_by_trait_desc.txt
data/1kg.mt/: .README.txt.crc  .metadata.json.gz.crc  README.txt
data/1kg.mt/cols/: .metadata.json.gz.crc
data/1kg.mt/entries/: .metadata.json.gz.crc
data/1kg.mt/globals/: .metadata.json.gz.crc
data/1kg.mt/rows/: .metadata.json.gz.crc
data/destination/__schema/: __1748265577716_1748265577716_5c5345397fe1e13e4b15ff339573e80f  __1748947420538_1748947420538_6b3eb6d3a0c0ade719ec031a72e0654f
data/hapmap3/: convert_rsid.R
docs/: README.md  changelog.md  commands.md  configuration.md  examples.md  getting-started.md  index.md  installation.md  metadata.md  population.md  projects.md  summary-statistics.md
examples/: index.html
getting-started/: index.html
gwasstudio/: __init__.py  config_manager.py  dask_client.py  main.py  nohup.out  test_ingestion.txt  test_snp_single_traitid_.txt  test_snp_traitid.txt
gwasstudio/cli/: export.py  info.py  ingest.py  query.py
gwasstudio/cli/metadata/: ingest.py  query.py  view.py
gwasstudio/config/: config.yaml
gwasstudio/data/: README.md  convert_rsid.R
gwasstudio/functions/: create_tiledb_schema.py  process_and_ingest.py
gwasstudio/methods/: extract_snp.py  genome_windows.py  locus_breaker.py
gwasstudio/mongo/: connection_manager.py  mixin.py  models.py
gwasstudio/utils/: __init__.py
installation/: index.html
metadata/: index.html
output/: 0.part
population/: index.html
projects/: index.html
scripts/: README.md  cli_test.sh  test_00.sh  test_01.sh  test_02.sh
scripts/metadata/: build_decode_dictionary.py
scripts/tests/01/: example_export_bbj-a-1.parquet  example_export_bbj-a-2.parquet  example_export_bbj-a-3.parquet  example_export_ebi-a-GCST004904.parquet  example_export_ieu-a-1089.parquet  example_export_ieu-a-2.parquet  example_export_ieu-a-785.parquet  example_export_ieu-a-85.parquet  example_export_ieu-a-974.parquet  example_export_ieu-b-40.parquet  example_export_meta.csv  (+17 more)
search/: search_index.json
src/gwasstudio/: __init__.py  config_manager.py  dask_client.py  main.py  test_query.tsv
summary-statistics/: index.html
test_files/: data_example.tsv
tests/data/: checksum.txt
tests/unit/: test_DataProfile.py  test_EnhancedDataProfile.py  test_MongoEngine_connection_manager.py  test_cli_list.py  test_compute_sha256.py  test_export_utils.py  test_metadata_ingest.py  test_metadata_query.py  test_metadata_utils.py  test_methods_dataframe.py  test_mongo_manager.py  test_query.py  test_read_bed.py  test_tiledb_schema_creator.py  test_utils.py  test_utils_cfg.py  test_utils_hashing.py  test_utils_path_joiner.py  test_utils_s3.py  test_utils_vault.py
(+474 files in other folders)
