[tool.ruff]
line-length = 120

[tool.poetry]
name = "gwasstudio"
version = "0.3.0"
description = ""
authors = ["Gianmauro Cuccuru <gianmauro.cuccuru@fht.org>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ht-diva/gwasstudio"
keywords = ["bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


[tool.poetry.scripts]
gwasstudio = 'gwasstudio.main:main'

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
click = "^8.1.3"
cloup = "^2.0.0.post1"
loguru = "^0.7.0"
scipy = "^1.14.1"
numpy = "^2.1.2"
pybedtools = "0.10.0"
dask = "^2024.9.0"
dask-jobqueue = "^0.9.0"
mongoengine = "^0.29.1"
comoda = "^0.4.2"
tiledb = "0.32.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.8.0"
mongomock = "^4.2.0.post1"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
