[project]
name = "gwasstudio"
version = "2.5.0"
description = ""
authors = [
    { name = "Gianmauro Cuccuru", email = "gianmauro.cuccuru@fht.org" },
    { name = "Bruno Ariano", email = "bruno.ariano@fht.org" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bokeh (>=3.7.3,<4.0.0)",
    "boto3 (>=1.37.11,<2.0.0)",
    "botocore (>=1.37.11,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "cloup (>=3.0.5,<4.0.0)",
    "dask (>=2024.12.1,<2025.0.0)",
    "dask-gateway (>=2024.1.0,<2025.0.0)",
    "dask-jobqueue (>=0.9.0,<0.10.0)",
    "hvac (>=2.3.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "polars (>=1.19.0,<2.0.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "tiledb (>=0.33.2,<0.34.0)"
]

[project.optional-dependencies]
plot = [
    "plotly (==6.1.0)",
    "dash-bio (>=1.0.1,<2.0.0)"
]


[project.scripts]
gwasstudio = 'gwasstudio.main:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
pre-commit = "^4.0.1"
mongomock = "^4.3.0"
setuptools = "^75.8.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
deptry = "^0.23.0"
pandas-stubs = "^2.3.0.250703"

[tool.ruff]
line-length = 120

[tool.deptry]
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
DEP003 = ["gwasstudio"]
DEP004 = ["mongomock"]
DEP002 = ["pyarrow", "bokeh"]
